/users/@me/sessions route
