# src/routes/user/userRoutes.ts
@@ -1,4 +1,5 @@
 import { getMe } from "./getMe";
+import { getMeSessions } from "./getMeSessions";
 import { getMeSteamUsers } from "./getMeSteamUsers";
 
-export const userRoutes = [getMe, getMeSteamUsers];
+export const userRoutes = [getMe, getMeSteamUsers, getMeSessions];
